syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

import "../../../vdp/model/v1alpha/common.proto";

// OcrObject represents a predicted ocr object
message OcrObject {
  // OCR text
  string text = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // OCR text score
  float score = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // OCR bounding box
  BoundingBox bounding_box = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// OcrInput represents the input of ocr task
message OcrInput {
  // Input type
  oneof type {
    // Image type URL
    string image_url = 1;
    // Image type base64
    string image_base64 = 2;
  }
}

// OcrInputStream represents the input of ocr task when using stream method
message OcrInputStream {
  // The list of file length for each uploaded binary file
  repeated uint64 file_lengths = 1 [ (google.api.field_behavior) = REQUIRED ];
  // Content of images in bytes
  bytes content = 2 [ (google.api.field_behavior) = REQUIRED ];
}

// OcrOutput represents the output of ocr task
message OcrOutput {
  // A list of OCR objects
  repeated OcrObject objects = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
